[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ldt"
version = "0.1.0"
description = "Linux Diagnostic Toolkit"
authors = [{name = "EMA"}]
requires-python = ">=3.10"

[project.scripts]
ldt = "ldt.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]